[package]
name = "implant"
version = "0.1.0"
authors = ["deadjakk <deadjakk@shell.rip>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
websocket = { git = "https://github.com/deadjakk/rust-websocket" }


