[package]
name = "server"
version = "0.1.0"
authors = ["deadjakk <deadjakk@shell.rip>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
utils = {path="../utils"}
structopt = { version = "0.3", default-features = false }
websocket = { git = "https://github.com/deadjakk/rust-websocket" }
